Correcciones varias. Imposible conecta desde fb

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,6 +2,7 @@
     <div class="col-md-12 text-center">
         <p>Ingrese al chat con su cuenta favorita</p>
         <button class="btn btn-primary" (click)="login('google')">Google</button>
-        <button class="btn btn-secondary" (click)="login('twitter')">Twitter</button>
+        <button class="btn btn-secondary" (click)="login('facebook')">Facebook</button>
+        <button class="btn btn-warning" (click)="login('GitHub')">GitHub</button>
 
     </div>
